2000-05-16  Richard Henderson  <rth@cygnus.com>

	* flow.c (commit_one_edge_insertion): Be prepared for a return
	insn to be inserted on the edge with a normal jump.
	* jump.c (jump_optimize_1): Don't look to create return isns.

	* flow.c (flow_delete_insn): Don't adjust reference count of notes.
	* jump.c (jump_optimize_1): Likewise.
	(returnjump_p): Verify the argument is a JUMP_INSN.
	* rtl.def (NOTE): Add 5th element for NOTE_INSN_DELETED_LABEL.

2000-05-16  Nick Clifton  <nickc@cygnus.com>

	* config/m32r/m32r.c (small_insn_p): Use INSN_P() to replace
	GET_RTX_CLASS (GET_CODE ()) == 'i'.
	(large_insn_p): Ditto.
	(m32r_is_insn): New function: Return true if the insn contains
	an executable instruction.
	(m32r_adjust_insn): Use m32r_is_insn.
	(m32r_sched_reorder): Use m32r_is_insn.
	(m32r_sched_variable_issue): Use m32r_is_insn.

2000-05-16  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000/rs6000.c (rs6000_select_section): Treat CONSTRUCTOR like
	VAR_DECL.

	* rs6000/sysv4.h (ASM_OUTPUT_DWARF_ADDR): Delete unused variable.

	* rs6000/sysv4.h (CPP_OS_LINUX_SPEC): Define __unix and __linux
	according to given options.

Tue May 16 12:17:31 2000  Jeffrey A Law  (law@cygnus.com)

	* mn10200.h (PREFERRED_RELOAD_CLASS): Do not prefer DATA_REGS
	if X has VOIDmode either.
	(LIMIT_RELOAD_CLASS): Similarly.

	* mn10200.md (indirect_jump, tablejump): Use "register_operand",
	not "general_operand" to match the processor's capabilities.

2000-05-16  Bruce Korb  <bkorb@gnu.org>

	* fixinc/README:  corrected return address
	* fixinc/check.diff:  regenerate, now that test works
	* fixinc/fixfixes.c(format_fix,format_write): reformatted
	(char_macro_def_fix,char_macro_use_fix): corrected and
	rewrote to use regex to parse the text
	* fixinc/inclhack.def: more testing
	* fixinc/fixincl.x:  regenerated

	* fixinc/inclhack.def: added several "test_text" attributes
	changed several fixes to use `c_fix = format'
	re-alphabetized the fixes

	* fixinc/check.diff: regenerate